jira struct change to match github, better test

--- a/statii.conf.example
+++ b/statii.conf.example
@@ -84,3 +84,10 @@ plugins:
         urls:
           - https://my.network
         
+  jira:
+    username: <redacted>
+    token: <redacted>
+    endpoint: https://my.jira.com
+    issues:
+      - name: My bugs
+        query: assignee = currentUser()
